--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -32,36 +31,7 @@
   <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Your awesome title","name":"Your awesome title","url":"http://0.0.0.0:4000/"}</script>
   <!-- End Jekyll SEO tag -->
-  <link rel="stylesheet" href="/assets/main.css">
-  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="assets/main.css">
+  <link rel="stylesheet" href="css/app.css">
   <link type="application/atom+xml" rel="alternate" href="http://0.0.0.0:4000/feed.xml" title="Your awesome title" />
 </head>
-
-<body>
-
-  <body>
-    <div class="container">
-      <header role="banner">
-        golangdocker
-      </header>
-      <div class="row">
-        <div class="col">
-          <h1 id="godoc">Godoc</h1>
-          <p>[IN PROGRESS]</p>
-          <p><code>godoc -http=:6060</code></p>
-          <p>Access via browser at: <code>http://{your-ip-address}:6060/pkg/{app-module-name-in-go.mod}</code></p>
-          <p>E.g.: <code>http://192.168.0.91:6060/pkg/github.com/mattwiater/golangdocker/</code></p>
-        </div>
-      </div>
-      <footer class="site-footer h-card">
-        FOOTER
-      </footer>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"></script>
-
-  </body>
-
-</html>
