--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,22 +4,18 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.8.0 -->
-  <title>Your awesome title | Write an awesome description for your new site here. You can edit this line in
-    _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site
-    description.</title>
+  <title>Golangdocker</title>
   <meta name="generator" content="Jekyll v4.3.1" />
-  <meta property="og:title" content="Your awesome title" />
+  <meta property="og:title" content="Golangdocker" />
   <meta property="og:locale" content="en_US" />
   <meta name="description"
-    content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
+    content="Golangdocker" />
   <meta property="og:description"
-    content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
-  <link rel="canonical" href="http://0.0.0.0:4000/" />
-  <meta property="og:url" content="http://0.0.0.0:4000/" />
+    content="Golangdocker" />
+  <link rel="canonical" href="https://mwiater.github.io/golangdocker/" />
+  <meta property="og:url" content="https://mwiater.github.io/golangdocker/" />
   <meta property="og:site_name" content="Your awesome title" />
   <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary" />
-  <meta property="twitter:title" content="Your awesome title" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -29,9 +25,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
   <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Your awesome title","name":"Your awesome title","url":"http://0.0.0.0:4000/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"Golangdocker","headline":"Golangdocker","name":"Golangdocker","url":"https://mwiater.github.io/golangdocker/"}</script>
   <!-- End Jekyll SEO tag -->
   <link rel="stylesheet" href="assets/main.css">
   <link rel="stylesheet" href="css/app.css">
-  <link type="application/atom+xml" rel="alternate" href="http://0.0.0.0:4000/feed.xml" title="Your awesome title" />
+  <link type="application/atom+xml" rel="alternate" href="https://mwiater.github.io/golangdocker/feed.xml" title="Your awesome title" />
 </head>
