--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,12 +23,12 @@
   <script src="https://kit.fontawesome.com/5ae6879468.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
   <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebSite","description":"Golangdocker","headline":"Golangdocker","name":"Golangdocker","url":"https://mwiater.github.io/golangdocker/"}</script>
   <!-- End Jekyll SEO tag -->
-  <link rel="stylesheet" href="assets/main.css">
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="/css/app.css">
   <link type="application/atom+xml" rel="alternate" href="https://mwiater.github.io/golangdocker/feed.xml" title="Your awesome title" />
 </head>
 <body>
@@ -38,11 +38,12 @@
     </header>
     <nav class="navbar bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="https://mwiater.github.io/golangdocker/godoc.html"><i class="fa-duotone fa-flask-vial fa-fw"></i> Tests</a>
-        <a class="navbar-brand" href="https://mwiater.github.io/golangdocker/linting.html"><i class="fa-duotone fa-screwdriver-wrench fa-fw"></i> Linting</a>
-        <a class="navbar-brand" href="https://mwiater.github.io/golangdocker/loadTesting.html"><i class="fa-duotone fa-weight-hanging fa-fw"></i> Load Testing</a>
-        <a class="navbar-brand" href="https://mwiater.github.io/golangdocker/godoc.html"><i class="fa-duotone fa-file-invoice fa-fw"></i> Godoc</a>
-        <a class="navbar-brand" href="https://mwiater.github.io/golangdocker/gosec.html"><i class="fa-duotone fa-shield-check fa-fw"></i> Gosec</a>
-        <a class="navbar-brand" href="https://mwiater.github.io/golangdocker/k8s.html"><i class="fa-duotone fa-chart-network fa-fw"></i> Kubernetes</a>
+        <a class="navbar-brand" href="/"><i class="fa-duotone fa-home fa-fw"></i> Home</a>
+        <a class="navbar-brand" href="godoc.html"><i class="fa-duotone fa-flask-vial fa-fw"></i> Tests</a>
+        <a class="navbar-brand" href="linting.html"><i class="fa-duotone fa-screwdriver-wrench fa-fw"></i> Linting</a>
+        <a class="navbar-brand" href="loadTesting.html"><i class="fa-duotone fa-weight-hanging fa-fw"></i> Load Testing</a>
+        <a class="navbar-brand" href="godoc.html"><i class="fa-duotone fa-file-invoice fa-fw"></i> Godoc</a>
+        <a class="navbar-brand" href="gosec.html"><i class="fa-duotone fa-shield-check fa-fw"></i> Gosec</a>
+        <a class="navbar-brand" href="k8s.html"><i class="fa-duotone fa-chart-network fa-fw"></i> Kubernetes</a>
       </div>
     </nav>
