--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,8 +27,8 @@
   <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebSite","description":"Golangdocker","headline":"Golangdocker","name":"Golangdocker","url":"https://mwiater.github.io/golangdocker/"}</script>
   <!-- End Jekyll SEO tag -->
-  <link rel="stylesheet" href="/assets/main.css">
-  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="assets/main.css">
+  <link rel="stylesheet" href="css/app.css">
   <link type="application/atom+xml" rel="alternate" href="https://mwiater.github.io/golangdocker/feed.xml" title="Your awesome title" />
 </head>
 <body>
