cleaning up docs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
     <nav class="navbar bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="/"><i class="fa-duotone fa-home fa-fw"></i> Home</a>
-        <a class="navbar-brand" href="godoc.html"><i class="fa-duotone fa-flask-vial fa-fw"></i> Tests</a>
+        <a class="navbar-brand" href="tests.html"><i class="fa-duotone fa-flask-vial fa-fw"></i> Tests</a>
         <a class="navbar-brand" href="linting.html"><i class="fa-duotone fa-screwdriver-wrench fa-fw"></i> Linting</a>
         <a class="navbar-brand" href="loadTesting.html"><i class="fa-duotone fa-weight-hanging fa-fw"></i> Load Testing</a>
         <a class="navbar-brand" href="godoc.html"><i class="fa-duotone fa-file-invoice fa-fw"></i> Godoc</a>
