--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,13 +46,13 @@
             <div class="col">
               <div class="card project-section">
                 <div class="card-header">
-                  <a href="/"><i class="fa-duotone fa-home fa-fw"></i> Home</a>
+                  <a class="homelink" href="/"><i class="fa-duotone fa-home fa-fw"></i> Home</a>
                 </div>
                 <div class="card-body">
                   <p class="card-text">Project summary, prerequisites, setup and application code.</p>
                 </div>
                 <small class="card-footer text-muted">
-                  <a href="/">Read More <i class="fa-duotone fa-angles-right"></i></a>
+                  <a class="homelink" href="/">Read More <i class="fa-duotone fa-angles-right"></i></a>
                 </small>
               </div>
             </div>
