--- a/_includes/header.html
+++ b/_includes/header.html
@@ -77,7 +77,7 @@
                   <a href="linting.html"><i class="fa-duotone fa-screwdriver-wrench fa-fw"></i> Linting</a>
                 </div>
                 <div class="card-body">
-                  <p class="card-text"><strong>How to:</strong> Lintint golang code using: <code>golangci-lint</code></p>
+                  <p class="card-text"><strong>How to:</strong> Linting golang code using for best practices: <code>golangci-lint</code></p>
                 </div>
                 <small class="card-footer text-muted">
                   <a href="linting.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
@@ -91,7 +91,7 @@
                   <a href="loadTesting.html"><i class="fa-duotone fa-weight-hanging fa-fw"></i> Load Testing</a>
                 </div>
                 <div class="card-body">
-                  <p class="card-text"><strong>How to:</strong> Load testing basics using <code>Artillery</code></p>
+                  <p class="card-text"><strong>How to:</strong> Basic load testing of apps, containers, pods using <code>Artillery</code></p>
                 </div>
                 <small class="card-footer text-muted">
                   <a href="loadTesting.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
