better theming for readability

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,97 +37,100 @@
     <header role="banner">
       golangdocker
     </header>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h4>Project Sections</h4>
-          <div class="row row-cols-3 row-cols-md-3">
+    <div class="row project-sections">
+      <div class="col">
+        <h1>Project Sections</h4>
+        <div class="row row-cols-3 row-cols-md-3">
 
-            <div class="col">
-              <div class="card project-section">
-                <div class="card-header">
-                  <a class="homelink" href="/"><i class="fa-duotone fa-home fa-fw"></i> Home</a>
-                </div>
-                <div class="card-body">
-                  <p class="card-text">Project summary, prerequisites, setup and application code.</p>
-                </div>
-                <small class="card-footer text-muted">
-                  <a class="homelink" href="/">Read More <i class="fa-duotone fa-angles-right"></i></a>
-                </small>
+          <div class="col">
+            <div class="card project-section">
+              <div class="card-header">
+                <a class="homelink" href="/"><i class="fa-duotone fa-home fa-fw"></i> Home</a>
               </div>
-            </div>
-
-            <div class="col">
-              <div class="card project-section">
-                <div class="card-header">
-                  <a href="tests.html"><i class="fa-duotone fa-flask-vial fa-fw"></i> Tests</a>
-                </div>
-                <div class="card-body">
-                  <p class="card-text">Unit tests with <code>go test</code> and API endpoint tests via <code>godoc</code>.</p>
-                </div>
-                <small class="card-footer text-muted">
-                  <a href="tests.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
-                </small>
+              <div class="card-body">
+                <p class="card-text">Project summary, prerequisites, setup and application code.</p>
               </div>
+              <small class="card-footer text-muted">
+                <a class="homelink" href="/">Read More <i class="fa-duotone fa-angles-right"></i></a>
+              </small>
             </div>
-
-            <div class="col">
-              <div class="card project-section">
-                <div class="card-header">
-                  <a href="linting.html"><i class="fa-duotone fa-screwdriver-wrench fa-fw"></i> Linting</a>
-                </div>
-                <div class="card-body">
-                  <p class="card-text"><strong>How to:</strong> Linting golang code using for best practices: <code>golangci-lint</code></p>
-                </div>
-                <small class="card-footer text-muted">
-                  <a href="linting.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
-                </small>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card project-section">
-                <div class="card-header">
-                  <a href="loadTesting.html"><i class="fa-duotone fa-weight-hanging fa-fw"></i> Load Testing</a>
-                </div>
-                <div class="card-body">
-                  <p class="card-text"><strong>How to:</strong> Basic load testing of apps, containers, pods using <code>Artillery</code></p>
-                </div>
-                <small class="card-footer text-muted">
-                  <a href="loadTesting.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
-                </small>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card project-section">
-                <div class="card-header">
-                  <a href="godoc.html"><i class="fa-duotone fa-file-invoice fa-fw"></i> Godoc</a>
-                </div>
-                <div class="card-body">
-                  <p class="card-text"><strong>How To:</strong> Document, test, and serve your documentation with <code>Godoc</code></p>
-                </div>
-                <small class="card-footer text-muted">
-                  <a href="godoc.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
-                </small>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card project-section">
-                <div class="card-header">
-                  <a href="k8s.html"><i class="fa-duotone fa-chart-network fa-fw"></i> Kubernetes</a>
-                </div>
-                <div class="card-body">
-                  <p class="card-text"><strong>How To:</strong> Integrating your container into a Kubernetes pod deployment.</p>
-                </div>
-                <small class="card-footer text-muted">
-                  <a href="k8s.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
-                </small>
-              </div>
-            </div>
-
           </div>
+
+          <div class="col">
+            <div class="card project-section">
+              <div class="card-header">
+                <a href="tests.html"><i class="fa-duotone fa-flask-vial fa-fw"></i> Tests</a>
+              </div>
+              <div class="card-body">
+                <p class="card-text">Unit tests with <code>go test</code> and API endpoint tests via <code>godoc</code>.
+                </p>
+              </div>
+              <small class="card-footer text-muted">
+                <a href="tests.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
+              </small>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card project-section">
+              <div class="card-header">
+                <a href="linting.html"><i class="fa-duotone fa-screwdriver-wrench fa-fw"></i> Linting</a>
+              </div>
+              <div class="card-body">
+                <p class="card-text"><strong>How to:</strong> Linting golang code using for best practices:
+                  <code>golangci-lint</code></p>
+              </div>
+              <small class="card-footer text-muted">
+                <a href="linting.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
+              </small>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card project-section">
+              <div class="card-header">
+                <a href="loadTesting.html"><i class="fa-duotone fa-weight-hanging fa-fw"></i> Load Testing</a>
+              </div>
+              <div class="card-body">
+                <p class="card-text"><strong>How to:</strong> Basic load testing of apps, containers, pods using
+                  <code>Artillery</code></p>
+              </div>
+              <small class="card-footer text-muted">
+                <a href="loadTesting.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
+              </small>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card project-section">
+              <div class="card-header">
+                <a href="godoc.html"><i class="fa-duotone fa-file-invoice fa-fw"></i> Godoc</a>
+              </div>
+              <div class="card-body">
+                <p class="card-text"><strong>How To:</strong> Document, test, and serve your documentation with
+                  <code>Godoc</code></p>
+              </div>
+              <small class="card-footer text-muted">
+                <a href="godoc.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
+              </small>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card project-section">
+              <div class="card-header">
+                <a href="k8s.html"><i class="fa-duotone fa-chart-network fa-fw"></i> Kubernetes</a>
+              </div>
+              <div class="card-body">
+                <p class="card-text"><strong>How To:</strong> Integrating your container into a Kubernetes pod
+                  deployment.</p>
+              </div>
+              <small class="card-footer text-muted">
+                <a href="k8s.html">Read More <i class="fa-duotone fa-angles-right"></i></a>
+              </small>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
