docs updates for .env config change

--- a/css/app.css
+++ b/css/app.css
@@ -14,11 +14,11 @@ header {
 }
 
 .row.project-sections {
-  background: #ffffff;
+  // background: #ffffff;
 }
 
 .row.project-sections div {
-  background: #ffffff;
+  // background: #ffffff;
 }
 
 a, a:visited, a:hover {
