--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -19,7 +19,9 @@
 }
 
 code {
-  background-color: #e6e6e6
+  background-color: #e6e6e6;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 a:hover {
